--- a/config/config.yaml
+++ b/config/config.yaml
@@ -95,16 +95,12 @@ platforms:
     name: "今日头条"
   - id: "baidu"
     name: "百度热搜"
-  - id: "wallstreetcn-hot"
-    name: "华尔街见闻"
-  - id: "thepaper"
-    name: "澎湃新闻"
+  - id: "ithome"
+    name: "IT之家"
+  - id: "nowcoder"
+    name: "牛客网"
   - id: "bilibili-hot-search"
     name: "bilibili 热搜"
-  - id: "cls-hot"
-    name: "财联社热门"
-  - id: "ifeng"
-    name: "凤凰网"
   - id: "tieba"
     name: "贴吧"
   - id: "weibo"
@@ -113,3 +109,11 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+  - id: "github"
+    name: "GitHub"
+  - id: "juejin"
+    name: "掘金"
+  - id: "chongbuluo"
+    name: "虫部落"
+  - id: "tengxun"
+    name: "腾讯新闻"
